--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,9 @@
+server:
+  port: 8080
 
+template:
+  templates:
+    - {"templateId" : "1", "templateFilePath" : "/Users/liangxiaole/Desktop/ITLearning/java/kafka-study/src/main/resources/template/template.json", "active" : true}
+    - {"templateId" : "2", "templateFilePath" : "/Users/liangxiaole/Desktop/ITLearning/java/kafka-study/src/main/resources/template/template.json", "active" : false}
+  template-result-type: 0 # 0-get file  1-get from db  2-es
+  template-result-file-path: "/Users/liangxiaole/Desktop/ITLearning/java/kafka-study/src/main/resources/template/templateResult.json"
